Remove Sinatra dependency, provide the minimum possible Sinatra compatibility layer (#15)
* Replace Sintara::Base with Apiculture::App

* Let's start playing

* Replace all Sinatra invocations with App

* Implement default responses with a 404

* Use Mustermann for routing for now

It has a farily thin API surface so will do for now

* Getting there

* Move the Sinatra-like methods to App

* Get rid of 'return` for now

* Captures the captures

* Uses IndifferentHash to transport params

Sintara is using this so it is very likely that people expect both
`params[:id]` and `params['id']` to work

* Removes call the pry

* Fix halting issues

* Fixes some last issues

* Remember those params

* Small tweak

* Removes ol blue eyes

* Update docs and license

* Renames variable

* We are in the matrix now

* Shuffle

* Fix

* Removes some unused code

* Beef up coverage

* Change build matrix

* Drop support for 2.1.5
* Move to the latest minor version
* Add 2.5.1
* Test the waters with 2.6.0

* Bump version to 0.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
+gemfile:
+  - gemfiles/Gemfile.rack-1.x
+  - gemfiles/Gemfile.rack-2.x
 rvm:
-- 2.1.5
-- 2.2.2
-- 2.3.3
-- 2.4.1
+- 2.3.7
+- 2.4.4
+- 2.5.1
+- 2.6.0-preview1
 sudo: false
 cache: bundler
 matrix:
   allow_failures:
-    - rvm: 2.1.5 # incompatible with the new jeweler version
+    - rvm: 2.6.0-preview1
