--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ gemfile:
   - gemfiles/Gemfile.rack-1.x
   - gemfiles/Gemfile.rack-2.x
 rvm:
-- 2.3.7
-- 2.4.4
-- 2.5.1
-- 2.6.0-preview1
+  - '2.3.8'
+  - '2.4.6'
+  - '2.5.5'
+  - '2.6.3'
+  - '2.7.0-preview1'
 sudo: false
 cache: bundler
 matrix:
   allow_failures:
-    - rvm: 2.6.0-preview1
+    - rvm: 2.7.0-preview1
