--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# rcov generated
-coverage
-coverage.data
-
 # rdoc generated
 rdoc
 
@@ -16,7 +12,7 @@ Gemfile.lock
 # jeweler generated
 pkg
 
-# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
+# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore:
 #
 # * Create a file at ~/.gitignore
 # * Include files you want ignored
@@ -48,3 +44,5 @@ pkg
 
 # For rubinius:
 #*.rbc
+
+.ruby-version
