--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,13 @@
-jobs:
-  include:
-  - rvm: 2.3
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 2.3
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 2.4
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 2.4
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 2.5
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 2.5
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 2.6
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 2.6
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 2.7
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 2.7
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 3.0
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 3.0
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 3.0
-    gemfile: gemfiles/Gemfile.rack-3.x
-  - rvm: 3.2
-    gemfile: gemfiles/Gemfile.rack-1.x
-  - rvm: 3.2
-    gemfile: gemfiles/Gemfile.rack-2.x
-  - rvm: 3.2
-    gemfile: gemfiles/Gemfile.rack-3.x
-
+gemfile:
+  - gemfiles/Gemfile.rack-1.x
+  - gemfiles/Gemfile.rack-2.x
+rvm:
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
+  - 3.0
+  - 3.2
 sudo: false
 cache: bundler
