--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,20 +6,23 @@ jobs:
   validate:
     name: Validate
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby-version:
+          - '2.5'
+          - '2.6'
+          - '2.7'
+          - '3.0'
+          - '3.2'
+          - '3.3'
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
-
-      - name: Install dependencies
-        run: |
-          gem update --system
-          gem install bundler
-          bundle install --jobs=3 --retry=3 --path=${BUNDLE_PATH:-vendor/bundle}
 
       - name: Run tests
         run: |
